deploy: 11d9743c7141ddd9017c2dfc76c36683fd7c9969

--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -88,9 +88,10 @@
                     <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
                     <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-                    <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="bitmaps.html">Working With Bitmaps</a></li>
+                    <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -152,9 +153,10 @@
             <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
             <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-            <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+            <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
-            <li class="level3 nav-leaf"><a href="bitmaps.html">Working With Bitmaps</a></li>
+            <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -185,7 +187,7 @@
 <div class="doodle" id="frame-background"></div>
 <script>CanvasFrameBackground.draw("frame-background")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmaps.html">←Working With Bitmaps</a> <a class="pagenav" href="layout-examples.html">Layout Examples→</a>
+            <a class="pagenav" href="bitmap.html">←Bitmaps in Canvas</a> <a class="pagenav" href="layout-examples.html">Layout Examples→</a>
           </div>
         </div>
         <footer>
