--- a/canvas/index.html
+++ b/canvas/index.html
@@ -88,9 +88,10 @@
                     <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
                     <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-                    <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level2 active nav-node"><a href="#">Canvas Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="bitmaps.html">Working With Bitmaps</a></li>
+                    <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -152,9 +153,10 @@
             <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
             <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-            <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+            <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level2 active nav-node"><a href="#">Canvas Backend</a></li>
-            <li class="level3 nav-leaf"><a href="bitmaps.html">Working With Bitmaps</a></li>
+            <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -188,7 +190,7 @@
 <p>The <code>Frame</code> must specify the <code>id</code> of the element where the drawing should be placed.
 Additional options include the background color and the frame size. The frame size can either be determined by the size of the picture or a fixed size. The first case is the default, and includes a 20 pixel border. You can change this by calling <code>withSizedToPicture</code>. The picture will be drawn centered on the drawing area. A fixed size frame, specified with <code>withSize</code>, has the given size and the origin is set to the center of the drawing area. This means that pictures that are not centered at the origin will not be centered on the screen.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../svg/">←SVG Backend</a> <a class="pagenav" href="bitmaps.html">Working With Bitmaps→</a>
+            <a class="pagenav" href="../svg/bitmap.html">←Bitmaps in SVG</a> <a class="pagenav" href="bitmap.html">Bitmaps in Canvas→</a>
           </div>
         </div>
         <footer>
