--- a/java2d/index.html
+++ b/java2d/index.html
@@ -88,9 +88,10 @@
                     <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
                     <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
                     <li class="level2 active nav-leaf"><a href="#">Java2D Backend</a></li>
-                    <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="../canvas/bitmaps.html">Working With Bitmaps</a></li>
+                    <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
@@ -152,9 +153,10 @@
             <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
             <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
             <li class="level2 active nav-leaf"><a href="#">Java2D Backend</a></li>
-            <li class="level2 nav-leaf"><a href="../svg/">SVG Backend</a></li>
+            <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
-            <li class="level3 nav-leaf"><a href="../canvas/bitmaps.html">Working With Bitmaps</a></li>
+            <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
