--- a/svg/index.html
+++ b/svg/index.html
@@ -88,9 +88,10 @@
                     <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
                     <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-                    <li class="level2 active nav-leaf"><a href="#">SVG Backend</a></li>
+                    <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="../canvas/bitmaps.html">Working With Bitmaps</a></li>
+                    <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
@@ -152,9 +153,10 @@
             <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
             <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
-            <li class="level2 active nav-leaf"><a href="#">SVG Backend</a></li>
+            <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
+            <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
-            <li class="level3 nav-leaf"><a href="../canvas/bitmaps.html">Working With Bitmaps</a></li>
+            <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
@@ -223,7 +225,7 @@
 <div class="doodle" id="parametric-spiral"></div>
 <script>SvgParametricSpiral.draw("parametric-spiral")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../java2d/">←Java2D Backend</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
+            <a class="pagenav" href="../java2d/">←Java2D Backend</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
           </div>
         </div>
         <footer>
