--- a/svg/bitmap.html
+++ b/svg/bitmap.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -155,6 +156,7 @@
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -274,7 +276,7 @@
 </ul>
 <p>For these operations, use a raster-based backend.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="index.html">←SVG Backend</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
+            <a class="pagenav" href="index.html">←SVG Backend</a> <a class="pagenav" href="examples.html">Examples→</a>
           </div>
         </div>
         <footer>
