--- a/svg/index.html
+++ b/svg/index.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -155,6 +156,7 @@
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -200,30 +202,7 @@
   .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">10.0</span><span>)
   .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">crimson</span><span>)
   
-</span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Svg</span><span>](</span><span class="string-literal">&quot;circle.svg&quot;</span><span>)</span></code></pre>
-
-<h2 id="examples" class="section">Examples</h2>
-<p>The source for these examples is <a href="https://github.com/creativescala/doodle-svg/tree/main/examples/src/main/scala">in the repository</a>.</p>
-
-<h3 id="concentric-circles" class="section">Concentric Circles</h3>
-<div class="doodle" id="concentric-circles"></div>
-<script>ConcentricCircles.draw("concentric-circles")</script>
-
-<h3 id="text-positioning" class="section">Text Positioning</h3>
-<div class="doodle" id="text-positioning"></div>
-<script>TextPositioning.draw("text-positioning")</script>
-
-<h3 id="doodle-logo" class="section">Doodle Logo</h3>
-<div class="doodle" id="doodle-logo"></div>
-<script>DoodleLogo.draw("doodle-logo")</script>
-
-<h3 id="pulsing-circle" class="section">Pulsing Circle</h3>
-<div class="doodle" id="pulsing-circle"></div>
-<script>PulsingCircle.draw("pulsing-circle")</script>
-
-<h3 id="parametric-spiral" class="section">Parametric Spiral</h3>
-<div class="doodle" id="parametric-spiral"></div>
-<script>SvgParametricSpiral.draw("parametric-spiral")</script></div>
+</span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Svg</span><span>](</span><span class="string-literal">&quot;circle.svg&quot;</span><span>)</span></code></pre></div>
           <div class="flex flex-row justify-between">
             <a class="pagenav" href="../java2d/">←Java2D Backend</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
           </div>
@@ -244,12 +223,6 @@
             <li class="level1 nav-node"><a href="#usage">Usage</a></li>
             <li class="level2 nav-leaf"><a href="#running-in-the-browser">Running in the Browser</a></li>
             <li class="level1 nav-leaf"><a href="#running-on-the-jvm">Running on the JVM</a></li>
-            <li class="level1 nav-node"><a href="#examples">Examples</a></li>
-            <li class="level2 nav-leaf"><a href="#concentric-circles">Concentric Circles</a></li>
-            <li class="level2 nav-leaf"><a href="#text-positioning">Text Positioning</a></li>
-            <li class="level2 nav-leaf"><a href="#doodle-logo">Doodle Logo</a></li>
-            <li class="level2 nav-leaf"><a href="#pulsing-circle">Pulsing Circle</a></li>
-            <li class="level2 nav-leaf"><a href="#parametric-spiral">Parametric Spiral</a></li>
           </ul>
         </div>
       </nav>
