--- a/pictures/size.html
+++ b/pictures/size.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -155,6 +156,7 @@
             <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
@@ -200,10 +202,10 @@ This is necessary because the size may depend on backend-specific calculations, 
       .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">hotPink</span><span>)
       .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">3.0</span><span>)
   )
-</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@67ed7faf
+</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@2ae72b76
 </span><span>  
 </span><span class="keyword">val</span><span> </span><span class="identifier">picture</span><span> = </span><span class="identifier">circle</span><span>.</span><span class="identifier">on</span><span>(</span><span class="identifier">boundingBox</span><span>)
-</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@562f677c</span></code></pre>
+</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@263920a1</span></code></pre>
 <p>This produces the picture shown below.</p>
 <div class="default-image-block">
   <img src="bounding-box.png" alt="A circle with a bounding box" title="A circle with a bounding box">
