deploy: b7713f1da044923f8fd33c188b372608bb8dd09d

--- a/java2d/bitmap.html
+++ b/java2d/bitmap.html
@@ -88,6 +88,7 @@
                     <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
                     <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Bitmaps in Java2D</a></li>
+                    <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -154,6 +155,7 @@
             <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
             <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Bitmaps in Java2D</a></li>
+            <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -217,7 +219,7 @@
   <li><code>base64ToIO[Format]()</code> and <code>base64[Format](frame)</code> to return a <code>IO[Base64[Format]]</code>.</li>
 </ul></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="index.html">←Java2D Backend</a> <a class="pagenav" href="../svg/">SVG Backend→</a>
+            <a class="pagenav" href="index.html">←Java2D Backend</a> <a class="pagenav" href="repl.html">Working at the REPL→</a>
           </div>
         </div>
         <footer>
