--- a/java2d/index.html
+++ b/java2d/index.html
@@ -88,6 +88,7 @@
                     <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
                     <li class="level2 active nav-node"><a href="#">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
+                    <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -154,6 +155,7 @@
             <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
             <li class="level2 active nav-node"><a href="#">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
+            <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
