--- a/svg/index.html
+++ b/svg/index.html
@@ -88,6 +88,7 @@
                     <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
                     <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
+                    <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
@@ -154,6 +155,7 @@
             <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
             <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
+            <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
@@ -204,7 +206,7 @@
   
 </span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Svg</span><span>](</span><span class="string-literal">&quot;circle.svg&quot;</span><span>)</span></code></pre></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../java2d/bitmap.html">←Bitmaps in Java2D</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
+            <a class="pagenav" href="../java2d/repl.html">←Working at the REPL</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
           </div>
         </div>
         <footer>
