deploy: 6f9b50f7b46e8e57af842dfbbea285042c9d807f

--- a/svg/bitmap.html
+++ b/svg/bitmap.html
@@ -91,6 +91,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -158,6 +159,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -278,7 +280,7 @@
 </ul>
 <p>For these operations, use a raster-based backend.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="index.html">←SVG Backend</a> <a class="pagenav" href="examples.html">Examples→</a>
+            <a class="pagenav" href="index.html">←SVG Backend</a> <a class="pagenav" href="tagging.html">Tagging Pictures→</a>
           </div>
         </div>
         <footer>
