--- a/svg/examples.html
+++ b/svg/examples.html
@@ -91,6 +91,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -158,6 +159,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
             <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -204,7 +206,7 @@
 <div class="doodle" id="hello"></div>
 <script>SvgTextExamples.drawFont("hello")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmap.html">←Bitmaps in SVG</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
+            <a class="pagenav" href="tagging.html">←Tagging Pictures</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
           </div>
         </div>
         <footer>
