--- a/svg/index.html
+++ b/svg/index.html
@@ -91,6 +91,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -158,6 +159,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
