--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <li class="level3 nav-leaf"><a href="java2d/repl.html">Working at the REPL</a></li>
                     <li class="level2 nav-node"><a href="svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="svg/bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="svg/tagging.html">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -158,6 +159,7 @@
             <li class="level3 nav-leaf"><a href="java2d/repl.html">Working at the REPL</a></li>
             <li class="level2 nav-node"><a href="svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="svg/bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="svg/tagging.html">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="canvas/bitmap.html">Bitmaps in Canvas</a></li>
